generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
 id     String      @id @default(uuid())
  firstName     String
  lastName      String
  password      String
  email         String       @unique
  emailVerified DateTime?
  username      String       @unique
  phone         String
  image         String?
  about         String?
  facebook      String?
  instagram     String?
  twitter       String?
  linkedIn      String?
  isAdmin       Boolean      @default(false)
  Messages      Message[]
  StudyTimes    StudyTime[]
  Todos         Todo[]
  EmployeeStatus EmployeeStatus[]
}


model StudyTime {
  id     Int      @id @default(autoincrement())
  userId String
  date   DateTime
  hours  Float
  User   User     @relation(fields: [userId], references: [id])
}

model Todo {
  id          String   @id @default(uuid())
  description String
  completed   Boolean  @default(false)
  createdAt   DateTime @default(now())
  userId      String
  User        User     @relation(fields: [userId], references: [id])
}

model Message {
  id     Int    @id @default(autoincrement())
  text   String
  userId String
  User   User   @relation(fields: [userId], references: [id])
}
model Actualite {
  id        Int      @id @default(autoincrement())
  title     String
  createdAt DateTime @default(now())
  fileUrl   String?
}

model EmployeeStatus {
  id        Int      @id @default(autoincrement())
  userId    String
  status    Status   @default(FREE)
  createdAt DateTime @default(now())

  user      User     @relation(fields: [userId], references: [id])
}

enum Status {
  IN_PROGRESS
  FREE
}
